<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:padding="16dp">


        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textSize="@dimen/title"
            android:textStyle="italic|bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_firstname"
            android:autofillHints="@string/template_firstname"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_lastname"
            android:autofillHints="@string/template_lastname"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="@dimen/normal_text"

            />

        <EditText
            android:id="@+id/textView_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_sex"
            android:autofillHints="@string/template_sex"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_age"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/template_age"
            android:autofillHints="@string/template_age"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_nationality"
            android:autofillHints="@string/template_nationality"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_idnumber"
            android:autofillHints="@string/template_idnumber"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_place"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_placeofbirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_birth_place"
            android:autofillHints="@string/template_birth_place"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_of_residence"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_placeofresidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_place_of_residence"
            android:autofillHints="@string/template_place_of_residence"
            android:inputType="text"
            android:textSize="@dimen/normal_text"  />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip_code"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_zip_code"
            android:autofillHints="@string/template_zip_code"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zodiac_sign"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_zodiac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_zodiac_sign"
            android:autofillHints="@string/template_zodiac_sign"
            android:inputType="text"
            android:textSize="@dimen/normal_text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_height"
            android:autofillHints="@string/template_height"
            android:inputType="number"
            android:textSize="@dimen/normal_text" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="@dimen/normal_text"
            />

        <EditText
            android:id="@+id/textView_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/template_weight"
            android:autofillHints="@string/template_weight"
            android:inputType="number"
            android:textSize="@dimen/normal_text" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

</ScrollView>
